# multi-agent-clinical-guideline

./: README.md  requirements.txt  run.py  schema.py  setup.py  task_manager.py
Agents/Plan_review_Agent/: Agent.py  Human Altered Decision Trees.docx  card.py  client.py  tools.py
Agents/intake_agent/: Agent.py  card.py  client.py
Common/: __init__.py  server.py  types.py
DoctorAgents/: shared_state.json
DoctorAgents/Intake_Agent/: Agent.py  __main__.py  requirements.txt  task_manager.py
DoctorAgents/Oncologist_Agent/: Agent.py  OncologistAgent_Guidelines.txt  __main__.py  pyproject.toml
DoctorAgents/Pathologist_agent/: Agent.py  __main__.py  pyproject.toml  requirements.txt
DoctorAgents/Radiologist_agent/: Agent.py  __main__.py
DoctorAgents/Surgical_agent/: Agent.py  __main__.py  pyproject.toml
DoctorAgents/Surveillance_agent/: Agent.py  __main__.py  pyproject.toml  task_manager.py
Host/: host.py
Host_agent/hosts/cli/: requirements.txt
Host_agent/hosts/multiagent/: host_agent.py  requirements.txt
clinical_guidelines/: README.md  __init__.py  example.py  requirements.txt  run.py  setup_models.py
clinical_guidelines/agents/: __init__.py  base_adk_agent.py  base_agent.py  host_agent.py  intake_agent.py  oncologist_agent.py  orchestrator_agent.py  orthopedic_surgeon_agent.py  pathologist_agent.py  radiologist_agent.py  remote_agent.py  surgical_agent.py  surveillance_agent.py
clinical_guidelines/core/: __init__.py  card_resolver.py  guideline_loader.py  model_manager.py  security.py
clinical_guidelines/guideline_store/: IntakeAgent_Guidelines.txt  PathologistAgent_Guidelines.txt  SurgicalAgent_Guidelines.txt
clinical_guidelines/human_interface/: review_interface.py
clinical_guidelines/orchestrator/: __init__.py
clinical_guidelines/schemas/: __init__.py  agent_card.py  agent_registry.py  base_schemas.py  patient_state.py
clinical_guidelines/state_management/: state_store.py
clinical_guidelines/tests/: test_intake_agent.py
clinical_guidelines/tools/: __init__.py  base_tools.py
clinical_guidelines/ui/: __init__.py  app.py
demo/: README.md
samples/python/agents/Intake_Agent/: __main__.py  pyproject.toml
samples/python/agents/Radiologist_agent/: Agent.py  RadiologistAgent_Guidelines.txt  __main__.py  pyproject.toml
samples/python/agents/WeatherAgentADK/: Agent.py  __main__.py  pyproject.toml  task_manager.py
samples/python/agents/hosts/multiagent/: host_agent.py  pyproject.toml
ui/: .env  requirements.txt
ui/service/server/: adk_host_manager.py
